--- a/app/src/main/res/layout/activity_down_load_main.xml
+++ b/app/src/main/res/layout/activity_down_load_main.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_down_load_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.download.downloadmanagers.DownLoadMainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_down_load_main"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_down_load_main"
-        app:layout_constraintRight_toRightOf="@+id/activity_down_load_main"
-        app:layout_constraintTop_toTopOf="@+id/activity_down_load_main" />
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/sys_download"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="系统下载"/>
+        android:layout_marginTop="20dp"
+        android:text="系统下载" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/sys_download2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="系统下载" />
+
+    <Button
+        android:id="@+id/sys_download3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="系统下载" />
+
+    <Button
+        android:id="@+id/sys_download4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="系统下载" />
+
+</LinearLayout>
